engine/test_pgns/invalid/move_a_just_moved.pgn
[GameType "Base+MLP"]
[Date "2023.03.24"]
[Event ""]
[Site ""]
[Round ""]
[White "noi"]
[Black "noi"]
[Result "InProgress"]

1. wP
2. bL wP-
3. wQ -wP
4. bP bL/
5. wM \wP
6. bQ \bP
7. wM /bQ
8. wM bP-
